<resources>
    <string name="app_name">MusicFinder</string>
    <string name="background_image_description">Background Image</string>
    <string name="welcome_to_music_finder">Welcome to Music\nFinder</string>
    <string name="music_finder_description">Simply describe your music preference,and AI will curate a playlist for you</string>
    <string name="get_started_button_text">Get Started</string>
    <string name="back_button_desc">Back arrow</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="song_question">How many songs would you like in the playlist?</string>
    <string name="generate_playlist">Generate Playlist</string>
    <string name="favourites_desc">Favourites</string>
    <string name="history_desc">History</string>
    <string name="close_icon_image_desc">Close icon image</string>
    <string name="menu_icon_desc">Image for menu icon</string>
    <string name="favourites_title">Favourites</string>
    <string name="history_title">History</string>
    <string name="song_list_title">Song List</string>

    <string-array name="title_name">
        <item>Artist</item>
        <item>Genre</item>
        <item>Time Period</item>
        <item>Occasion or Mood</item>
        <item>Additional Filters</item>
    </string-array>

    <string-array name="page_desc">
        <item>Start your music journey by selecting a specific artist or band.</item>
        <item>It\'s time to define the genre you\'re interested in.</item>
        <item>Specify the time period you prefer.</item>
        <item>Customise your playlist for specific situations or emotional states.</item>
        <item>Additional filters to refine the music recommendations.</item>
    </string-array>

    <string-array name="page_hint">
        <item>Enter an artist/band…</item>
        <item>Enter a genre…</item>
        <item>Choose a specific decade…</item>
        <item>Describe the occasion/mood…</item>
        <item>Filters to apply…</item>
    </string-array>


</resources>